# recupero-io

./: .dockerignore  .env.example  .gitignore  Dockerfile  JACOB_HANDOFF.md  JACOB_TESTING_TONIGHT.md  README.md  _audit_render.py  conftest.py  journal.txt  package-lock.json  pyproject.toml  railway.json  test_pipeline.py  test_supabase_store.py  test_worker.py  test_worker_e2e.py
config/: default.yaml
docs/: ARCHITECTURE.md  ATTRIBUTION_STRATEGY.md  BACKLOG.md  BRIDGE_PAIRING.md  BRIEF_READTHROUGH_FINDINGS_v030.md  CLIENT_GRAPH_ROADMAP.md  COMPETITIVE_ROADMAP.md  COMPETITIVE_SCORECARD.md  CUSTOMER_DRY_RUN_2026-05-15.md  DATA_MODEL.md  DATA_PROCUREMENT_RUNBOOK.md  DATA_QUALITY_AUDIT_2026-05-15.md  DEPLOY_v0_32_0_RUNBOOK.md  DEV_ONBOARDING.md  ENTERPRISE_READINESS.md  ENV_VARS.md  FLIGHT-SUMMARY.md  GOVERNMENT_TESTER_GUIDE.md  GOVERNMENT_TESTER_v0.10.md  GO_LIVE_RUNBOOK.md  HANDOFF_TO_JACOB_v0.5_through_v0.7.md  INDUSTRY_BEST_MODE.md  INTAKE_ADDRESS_VALIDATION.md  INVESTIGATIONS_API.md  JACOB_ADVERSARY_AUDIT_v032.md  JACOB_CALL_PREP.md  JACOB_CROSS_CUTTING_AUDIT_v032.md  JACOB_FREEZE_LETTER_AUDIT_v032.md  JACOB_HANDOFF_v0.34.md  JACOB_LE_HANDOFF_AUDIT_v032.md  JACOB_ROUND2_ADVERSARY_AUDIT_v032.md  JACOB_ROUND2_CROSS_CUTTING_AUDIT_v032.md  JACOB_ROUND2_SECURITY_AUDIT_v032.md  JACOB_ROUND2_TEMPLATES_AUDIT_v032.md  JACOB_ROUND2_TRACE_AUDIT_v032.md  JACOB_ROUND2_VALIDATOR_AUDIT_v032.md  JACOB_ROUND3_TEMPLATES_AND_CROSS_AUDIT_v032.md  JACOB_SECURITY_AUDIT_v032.md  JACOB_TEST_NOTE_v0_32_1.md  JACOB_TRACE_AUDIT_v032.md  (+52 more)
infra/: README.md
infra/grafana/: recupero-saas-dashboard.json
infra/k8s/: api-deployment.yaml  api-hpa.yaml  ingress.yaml  namespace.yaml  scheduler-deployment.yaml  secret.example.yaml  worker-deployment.yaml  worker-scaledobject.yaml
infra/terraform/: main.tf  outputs.tf  variables.tf
jacob_handoff_pkg/: email_body.txt  recupero_v0.34.4_jacob_handoff.eml
migrations/: 000_bootstrap_base_tables.sql  001_watchlist.sql  002_watchlist_cleanup.sql  003_pricing_cache.sql  004_watchlist_priority.sql  005_emails_sent.sql  006_engagement_tracking.sql  007_case_tokens.sql  008_engagement_signatures.sql  009_kyc_confirmation.sql  010_payments.sql  011_address_observations.sql  012_monitoring_subscriptions.sql  013_freeze_outcomes.sql  014_case_token_hmac.sql  015_case_tokens_hmac_constraints.sql  015_engagement_double_submit_guard.sql  016_drop_case_tokens_raw_token.sql  016_freeze_letters_unique_hardening.sql  017_monitoring_alert_channels.sql  018_freeze_followup_tracking.sql  019_case_clusters.sql  020_law_firms.sql  021_schema_drift_backfill.sql  022_rename_letter_language_to_letter_tier.sql  023_drop_letter_language_column.sql  024_engagement_double_submit_guard.sql  025_freeze_letters_unique_hardening.sql  026_case_tokens_pepper_id.sql  027_recovery_disclosures.sql  028_brief_review_status.sql  029_cron_jobs_lock.sql  030_label_candidates.sql  031_freeze_outcomes_silence_dedup.sql  032_operator_graph_annotations.sql  033_recovery_alerts.sql  034_audit_log.sql  035_recovery_alert_case_mgmt.sql  036_cluster_membership.sql  037_multitenancy.sql  (+7 more)
scripts/: _prod_dsn_guard.py  _v029_1_expand_more_bridges.py  _v029_1_label_db_sweep.py  _v029_expand_bridges.py  _v033_add_allbridge_mayan_bridges.py  _v033_add_orbiter_makers.py  _v033_orbiter_decoder_provenance.md  _v034_bridge_staleness.py  _v034_gen_ofac_feed.py  _v034_score_zigha_reach.py  _v034_sdn_crosscheck.py  _v034_seed_corrections.py  _v034_tornado_delisting.py  _verify_addr_checksums.py  apply_migration.py  approve_validation_row.py  backup_investigations.py  check_stale_reviews.py  coverage_safety_critical.sh  deploy_preflight.py  deploy_to_production.py  download_validation_briefs.py  e2e_smoke.py  export_watchlist.py  insert_validation_row.py  measure_trace_coverage.py  monitor_watchlist.py  mutation_smoke.py  nightly_audit.py  prewarm_pricing_cache.py  quickstart.sh  recupero_watch.py  retrace_backfill_scan.py  retrace_on_label_update.py  seed_labels.py  setup_test_db.sh  smoke_deliverables.py  smoke_flow_diagram.py  smoke_new_chains.py  smoke_trace_report.py  (+4 more)
src/recupero/: __init__.py  _common.py  _pricing.py  cli.py  config.py  demo_case.py  intel_harvest.py  logging_setup.py  models.py
src/recupero/_defaults/: __init__.py  default.yaml
src/recupero/api/: __init__.py  _supabase_case_source.py  address_profile.py  ai_triage_api.py  app.py  audit_api.py  auth.py  benchmark_api.py  case_index_api.py  case_overview_api.py  cooperation_api.py  cron_admin_api.py  cron_console.py  (+14 more)
tests/: _link_helper.py  conftest.py  rls_e2e_proof.py  test_adapter_timestamp_tz.py  test_adaptive_depth.py  test_addr_format.py  test_address_checksum_consistency.py  test_address_poisoning.py  test_address_prior_cases.py  test_address_profile.py  test_ai_editorial_adversarial.py  test_ai_editorial_retry.py  test_ai_triage.py  test_ai_triage_console.py  test_ai_victim_summary_field.py  test_airdrop_spam_filter.py  test_alchemy_client_compat.py  test_api_app.py  test_api_auth_adversarial.py  test_api_optional_middleware.py  test_api_route_authz.py  test_apply_migration_audit.py  test_aptos_adapter.py  test_async_safety_audit.py  test_attribution_coverage.py  test_attribution_feed.py  test_audit_coverage_gaps.py  test_audit_log.py  test_audit_log_append_only.py  test_benchmark_console.py  test_bitcoin_adapter.py  test_bitcoin_adapter_adversarial.py  test_bitcoin_address.py  test_bitcoin_esplora.py  test_bitcoin_fetch_cap.py  test_bitcoin_multi_input_v032_1.py  test_bridge_calldata.py  test_bridge_calldata_canonical.py  test_bridge_mapping_completeness.py  test_bridge_matching.py  (+488 more)
tests/fixtures/: orbiter_ptext_reference.json  thorchain_btc_swap.json  zigha_dln_createsaltedorder.json  zigha_ground_truth.json  zigha_inputs.json
tests/integration/: README.md  __init__.py  conftest.py  test_freeze_learning_recorder.py  test_real_concurrent_races.py  test_stripe_to_dispatcher.py  test_trace_to_brief.py
web/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json
web/src/: middleware.ts
(+383 files in other folders)
