[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recupero"
version = "0.27.0"
description = "Trace stolen crypto from a victim wallet to law-enforcement-actionable endpoints"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Recupero" }]

dependencies = [
    # HTTP + retries
    "httpx>=0.27,<1.0",
    "tenacity>=8.2,<9.0",

    # Data modeling
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",

    # Config + env
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",

    # CLI
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",

    # Address + value handling
    "eth-utils>=4.1,<5.0",      # checksum addresses, hex utilities
    "eth-typing>=4.0,<5.0",
    "eth-hash[pycryptodome]>=0.7,<1.0",   # required keccak backend for eth-utils

    # Time
    "python-dateutil>=2.8,<3.0",

    # On-disk storage
    "orjson>=3.10,<4.0",         # faster JSON for large case files

    # Templated HTML for briefs/reports
    "jinja2>=3.1,<4.0",

    # Worker queue (Phase 2): Supabase Postgres via the transaction pooler.
    # [binary] ships pre-built wheels — no Visual C++ Build Tools required.
    "psycopg[binary]>=3.2,<4.0",

    # Flow-diagram rendering for freeze briefs / LE handoffs.
    # Pure-Python wrapper around the `dot` binary (installed via apt in
    # the Dockerfile). Locally on Windows, install Graphviz from
    # https://graphviz.org/download/ and ensure `dot.exe` is on PATH.
    "graphviz>=0.20,<1.0",

    # Editorial-drafting stage (worker). Lazy-imported in
    # reports/ai_editorial.py, but required for any complete pipeline run.
    # Pin major to avoid surprise breaking changes; floor matches the API
    # surface ai_editorial.py expects (Messages API + usage accounting).
    "anthropic>=0.40,<1.0",

    # PDF generation for freeze-letter + LE-handoff deliverables.
    # WeasyPrint renders the same Jinja-produced HTML to PDF, preserving
    # the Etherscan hyperlinks in the fund-flow SVG as PDF link
    # annotations. Lazy-imported in worker/_deliverables.py so the CLI
    # paths that don't need PDF output (and don't have the apt-level
    # Pango/Cairo libs installed) don't fail on import.
    # Pin to >=63 — earlier 60.x / 61.x had known issues with PDF link
    # annotation generation (the /Link /Annot entries that make
    # rendered anchors clickable in PDF viewers). 63.x lands the rewrite
    # that emits link rectangles correctly aligned with rendered text.
    "weasyprint>=63,<70",

    # pypdf for the post-processor in worker/_pdf_links.py — walks
    # WeasyPrint's PDF output and injects /Link annotations for every
    # rendered Etherscan/Arbiscan/etc. URL that didn't get one
    # automatically. Closes the coverage gap from ~54% to ~100% on
    # the deep-trace fixture. Tiny dependency, no native build.
    "pypdf>=4.0,<6.0",

    # Ed25519 signing for court-admissible chain-of-custody
    # attestations (v0.13.7). Battle-tested Python crypto wrapper
    # over OpenSSL; standard for any prod app needing real
    # asymmetric signatures.
    "cryptography>=42,<45",

    # FastAPI service surface (v0.15.1). The REST endpoints for
    # wallet screening / token-risk / monitoring are exposed via
    # FastAPI so exchanges + compliance teams can integrate against
    # an OpenAPI-described API. Pinned to >=0.110 for current Python
    # 3.11+ support; <1.0 to avoid pre-1.0 API churn.
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-httpx>=0.30,<1.0",
    "respx>=0.21,<1.0",          # alternative httpx mocking
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "types-PyYAML",
    "types-python-dateutil",
]

[project.scripts]
recupero = "recupero.cli:app"
recupero-worker = "recupero.worker.main:cli"
recupero-ops = "recupero.ops.cli:cli"
recupero-api = "recupero.api.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"recupero._defaults" = ["*.yaml"]
# Seed label lists loaded by labels/store.py + freeze/asks.py via Path(__file__).
"recupero.labels.seeds" = ["*.json"]
# Jinja2 templates loaded by reports/brief.py via Path(__file__).
"recupero.reports.templates" = ["*.j2", "*.html.j2"]
# Customer-portal templates loaded by portal/server.py via FileSystemLoader.
"recupero.portal.templates" = ["*.j2", "*.html.j2"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "RET", "SIM"]
ignore = ["E501"]   # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
# v0.20.0 (round-13 Phase B): integration-test markers.
# `live` — test hits real external services; requires
#   RECUPERO_INTEGRATION_LIVE=1 to opt in (gated by the
#   `live_mode_required` fixture in tests/integration/conftest.py).
# `slow` — test takes > 5s; can be skipped with `-m "not slow"`.
markers = [
    "live: test requires real external services (set RECUPERO_INTEGRATION_LIVE=1)",
    "slow: test takes > 5 seconds",
]
